--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 /* Some kind of header tag is supposed to be here */
-1 {
+h1 {
   color: red;
 }
 
 /* You should have input here */
-someinputhere {
-  border: 1px solid black;
+input {
+  border: 2px solid blue;
   border-radius: 5px;
   padding: 5px;
   margin: 5px;
+}
+input:focus {
+  border: 3px solid blue;
+  outline-color: transparent;
 }
 
 @keyframes rainbow {
@@ -39,11 +43,11 @@ someinputhere {
 }
 
 /* half of this class tag is in the html file already */
-.-text {
+.rainbow {
   animation: rainbow 5s linear infinite;
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text;
   -webkit-animation: rainbow 5s linear infinite;
-  animation: rainbow 5s linear infinite;
+  animation: rainbow 5s linear infinite; */
 }
 
 @keyframes wave {
